[workspace]
members = [
    "anydir-macro",
    "anydir",
]

workspace.resolver = "2"

[workspace.dependencies]
include_dir = "0.7.4"

[workspace.package]
version = "0.1.12"
edition = "2021"
authors = ["ArrowPC"]
description = "A crate for working with both compile-time embedded directories and runtime directories using an abstraction."
license = "MIT"
repository = "https://github.com/arrowpc/anydir"
readme = "README.md"
keywords = ["embed", "directory", "macro"]
categories = ["filesystem", "development-tools"]
